testfx/errors/error_tests/edge_03_const_keyword.fx
// 测试: 使用 JS 的 const 关键字
const PI = 3.14
println(PI)
